--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $white;
+	background: #1a8cff;
   font: 18px/1.4 $helvetica;
-  color: $darkGray;
+  color: #b800e6;
 }
 
 .container {
