--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: #00e600;
+	background: #0066ff;
   font: 18px/1.4 $helvetica;
-  color: #b800e6;
+  color: #9933ff;
 }
 
 .container {
