--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #0066ff;
+	background: 
   font: 18px/1.4 #ffff00;
   color: #400080;
 }
@@ -28,6 +28,7 @@ body {
   max-width: 740px;
   padding: 0 10px;
   width: 100%;
+background: rgba(153, 211, 223);
 }
 
 h1, h2, h3, h4, h5, h6 {
