--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #ff9900
+	background-image: url(http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg)
   font: 18px/1.4 #ffff00;
   color: #400080;
 }
