--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background-image: url("http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg");
   font: 18px/1.4 #ffff00;
-  color: #400080;
+  color: #d9b310;
 }
 
 .container {
