--- a/style.scss
+++ b/style.scss
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #d9b310;
+  color: #328cc1;
   font-weight: bold;
 
   line-height: 1.7;
