--- a/style.scss
+++ b/style.scss
@@ -221,7 +221,6 @@ nav {
     display: block;
     font-size: 16px;
   }
-
   a {
     margin-left: 20px;
     color: $darkGray;
@@ -285,4 +284,4 @@ footer {
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-@import "svg-icons";
+	@import "svg-icons"}",
