--- a/style.scss
+++ b/style.scss
@@ -223,7 +223,7 @@ nav {
   }
   a {
     margin-left: 20px;
-    color: $darkGray;
+   color: $darkGray;
     text-align: right;
     font-weight: 300;
     letter-spacing: 1px;
@@ -233,7 +233,7 @@ nav {
       color: $blue;
     }
   }
-}
+
 
 //
 // .main
@@ -284,4 +284,4 @@ footer {
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-	@import "svg-icons"}":
+	@import "svg-icons"":".
