--- a/style.scss
+++ b/style.scss
@@ -225,7 +225,7 @@ nav {
     margin-left: 20px;
    color: $darkGray;
     text-align: right;
-    font-weight: 300;
+   font-weight: 300;
     letter-spacing: 1px;
 
     @include mobile {
@@ -235,8 +235,7 @@ nav {
   }
 
 
-//
-// .main
+//// .main
 //
 
 .posts > .post {
@@ -284,4 +283,4 @@ footer {
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-@import "svg-icons";
+@import "svg-icons":
