--- a/style.scss
+++ b/style.scss
@@ -216,7 +216,7 @@ nav {
   font-size: 18px;
 
   @include mobile {
-    float: none;
+   float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
@@ -227,7 +227,6 @@ nav {
     text-align: right;
    font-weight: 300;
     letter-spacing: 1px;
-
     @include mobile {
       margin: 0 10px;
       color: $blue;
@@ -283,4 +282,4 @@ footer {
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-@import "svg-icons":
+@import "svg-icons".
