--- a/style.scss
+++ b/style.scss
@@ -204,8 +204,7 @@ img {
   color: $gray;
   font-size: 16px;
 
-  @include mobile {
-    margin: 3px 0;
+ @include mobile {    margin: 3px 0;
   }
 }
 
@@ -214,9 +213,8 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
-
   @include mobile {
-   float: none;
+  float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
@@ -225,8 +223,7 @@ nav {
     margin-left: 20px;
    color: $darkGray;
     text-align: right;
-   font-weight: 300;
-    letter-spacing: 1px;
+   font-weight: 300;    letter-spacing: 1px;
     @include mobile {
       margin: 0 10px;
       color: $blue;
@@ -282,4 +279,4 @@ footer {
 // Settled on moving the import of syntax highlighting to the bottom of the CSS
 // ... Otherwise it really bloats up the top of the CSS file and makes it difficult to find the start
 @import "highlights";
-@import "svg-icons".
+	@import "svg-icons"}
