--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
--
+--
 ---
 
 //
@@ -34,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: #328cc1;
   font-weight: bold;
-
+-
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 20px;
@@ -44,10 +44,10 @@ h1, h2, h3, h4, h5, h6 {
  }
   }
 
-h1 {
+-h1 {
   font-size: 30px;
   a {
-    color: #a239ca;
+    color-background: #a239ca;
   }
 
 h2 {
