--- a/style.scss
+++ b/style.scss
@@ -10,19 +10,16 @@
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
-/* BASE RULES */
-/**************/
+/* BASE RULES *//**************/
 
 html {
-  font-size: 100%;
-}
+  font-size: 100%;}
 
 body {
 	background-image: url("http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg");
   font: 18px/1.4 #ffff00;
   color: #d9b310;
 }
-
 .container {
   margin: 0 auto;
   max-width: 740px;
@@ -32,8 +29,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #328cc1;
-  font-weight: bold;
+  color: #328cc1;  font-weight: bold;
 -
   line-height: 1.7;
   margin: 1em 0 15px;
@@ -44,7 +40,7 @@ h1, h2, h3, h4, h5, h6 {
  }
   }
 
--h1 {
+h1 {
   font-size: 30px;
   a {
     color: #328cc1;
