--- a/style.scss
+++ b/style.scss
@@ -17,7 +17,7 @@ html {
 
 body {
 	background-image: url("http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg");
-  font: 18px/1.4 #ffff00;
+  font: 18px/1.4;
   color: #d9b310;
 }
 .container {
