--- a/style.scss
+++ b/style.scss
@@ -13,7 +13,8 @@
 /* BASE RULES *//**************/
 
 html {
-  font-size: 100%;}
+  font-size: 100%;
+}
 
 body {
 	background-image: url("http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg");
@@ -29,8 +30,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #328cc1;
-font-weight: bold;
+  color: #328cc1; font-weight: bold;
 
   line-height: 1.7;
   margin: 1em 0 15px;
