--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,4 @@
---
+---
 ---
 
 //
@@ -10,43 +10,46 @@
 // Syntax highlighting @import is at the bottom of this file
 
 /**************/
-/* BASE RULES *//**************/
+/* BASE RULES */
+/**************/
 
 html {
   font-size: 100%;
 }
 
 body {
-	background-image: url("http://cdn.pcwallart.com/images/weed-smoke-cloud-wallpaper-3.jpg");
+	background: $white;
   font: 18px/1.4 $helvetica;
-  color: #d9b310;
+  color: $darkGray;
 }
+
 .container {
   margin: 0 auto;
   max-width: 740px;
-  padding: 0 20px;
+  padding: 0 10px;
   width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #328cc1; 
-font-weight: bold;
+  color: $darkerGray;
+  font-weight: bold;
 
   line-height: 1.7;
   margin: 1em 0 15px;
-  padding: 20px;
+  padding: 0;
 
   @include mobile {
     line-height: 1.4;
   }
- }
+}
 
 h1 {
-  font-size: 64px;
+  font-size: 30px;
   a {
-    background-color: #328cc1;
+    color: inherit;
   }
+}
 
 h2 {
   font-size: 24px;
@@ -66,12 +69,12 @@ p {
 }
 
 a {
-  background-color: $blue;
+  color: $blue;
   text-decoration: none;
 	cursor: pointer;
   &:hover, &:active {
     color: $blue;
-}
+  }
 }
 
 ul, ol {
@@ -162,8 +165,8 @@ img {
 
 .site-avatar {
   float: left;
-  width: 40px;
-  height: 40px;
+  width: 70px;
+  height: 70px;
   margin-right: 15px;
 
   @include mobile {
@@ -202,7 +205,8 @@ img {
   color: $gray;
   font-size: 16px;
 
- @include mobile {    margin: 3px 0;
+  @include mobile {
+    margin: 3px 0;
   }
 }
 
@@ -211,25 +215,30 @@ nav {
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
   font-size: 18px;
+
   @include mobile {
-  float: none;
+    float: none;
     margin-top: 9px;
     display: block;
     font-size: 16px;
   }
+
   a {
     margin-left: 20px;
-   color: $darkGray;
+    color: $darkGray;
     text-align: right;
-   font-weight: 300;    letter-spacing: 1px;
+    font-weight: 300;
+    letter-spacing: 1px;
+
     @include mobile {
       margin: 0 10px;
       color: $blue;
     }
   }
+}
 
-
-//// .main
+//
+// .main
 //
 
 .posts > .post {
