--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #cc00cc;
+	background: linear-gradient(to bottom, #66ff66 0%, #ffff66 100%);
   font: 18px/1.4 $helvetica;
   color: #0000ff;
 }
