--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: linear-gradient(to bottom, #0000ff 0%, #990099 100%);
+	background-image: url("https://www.bergerpaints.com/imaginecolours/wp-content/uploads/2016/03/colour-blog-1170x693.png");
   font: 18px/1.4 $helvetica;
   color: #0000ff;
 }
