--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: linear-gradient(to bottom, #cc66ff 0%, #6699ff 100%);
+	background: #cc66ff;
   font: 18px/1.4 $helvetica;
   color: #0000ff;
 }
