--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #cc66ff;
+	background: #linear-gradient(to bottom, #33ccff 0%, #ff99cc 100%);
   font: 18px/1.4 $helvetica;
   color: #0000ff;
 }
