--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: #D29CA6;
+	background: $green;
   font: 18px/1.4 $helvetica;
-  color: #0000ff;
+  color: $yellow;
 }
 
 .container {
