--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: $blue;
+	background: #66ff99;
   font: 18px/1.4 $helvetica;
-  color: $green;
+  color: #ff99c2;
 }
 
 .container {
