--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #ffcc99;
+	background:linear-gradient(to bottom, #ffffff 0%, #3399ff 100%);
   font: 18px/1.4 $helvetica;
   color: #0066ff;
 }
