--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background:#https://www.bergerpaints.com/imaginecolours/wp-content/uploads/2016/03/colour-blog-1170x693.png;
+	background:linear-gradient(to bottom, #33ccff 33%, #ff99cc 100%);
   font: 18px/1.4 $helvetica;
   color: #0066ff;
 }
