--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: www.''bergerpaints.com''/imaginecolours/wp-content/uploads/2016/03/colour-blog-1170x693.png;
+	background: linear-gradient(to bottom, #99ff33 33%, #ff9966 91%);
   font: 18px/1.4 $helvetica;
   color: #0066ff;
 }
