--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: linear-gradient(to bottom, #99ff33 33%, #ff9966 91%);
+	background-image: url("www.bergerpaints.com/imaginecolours/wp-content/uploads/2016/03/colour-blog-1170x693.png")
   font: 18px/1.4 $helvetica;
   color: #0066ff;
 }
