--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background: linear-gradient(to bottom, #984b43 0%, #eac67a 100%);
   font: 18px/1.4 $helvetica;
-  color: #0066ff;
+  color: #233237;
 }
 
 .container {
