--- a/style.scss
+++ b/style.scss
@@ -18,9 +18,9 @@ html {
 }
 
 body {
-	background: linear-gradient(to bottom, #984b43 0%, #eac67a 100%);
+	background: linear-gradient(to bottom, #6c648b 0%, #68baa7 100%);
   font: 18px/1.4 $helvetica;
-  color: #233237;
+  color: #fba100;
 }
 
 .container {
