--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: linear-gradient(to bottom, #6c648b 0%, #68baa7 100%);
+	background-image: url("https://wallpapercave.com/wp/9Zk2kcY.jpg");
   font: 18px/1.4 $helvetica;
   color: #fba100;
 }
