--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background-image: url("https://ewurabenasvoice.files.wordpress.com/2016/10/fire_vs_ice_wallpaper_1440x900_by_water_frez-d935xco.jpg?w=1024");
   font: 18px/1.4 $helvetica;
-  color: #66ff33;
+  color: #233237;
 }
 
 .container {
@@ -32,7 +32,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
-  color: #fba100;
+  color: #233237;
   font-weight: bold;
 
   line-height: 1.7;
