--- a/style.scss
+++ b/style.scss
@@ -34,7 +34,8 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $helveticaNeue;
   color: #233237;
   font-weight: bold;
-
+text-shadow: 2px 2px;
+	
   line-height: 1.7;
   margin: 1em 0 15px;
   padding: 0;
