--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,4 @@
 ---
----
 
 //
 // IMPORTS
@@ -18,7 +17,7 @@ html {
 }
 
 body {
-	background-image: url("https://ewurabenasvoice.files.wordpress.com/2016/10/fire_vs_ice_wallpaper_1440x900_by_water_frez-d935xco.jpg?w=1024");
+	background: #ff383f;
   font: 18px/1.4 $helvetica;
   color: #233237;
 }
