--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,5 @@
 ---
+---
 
 //
 // IMPORTS
@@ -17,7 +18,7 @@ html {
 }
 
 body {
-	background: #ff383f;
+	background: #0066cc;
   font: 18px/1.4 $helvetica;
   color: #233237;
 }
