--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #0066cc;
+	background-image: url("http://www.intrawallpaper.com/static/images/cube-pattern-28617-2560x1600.jpg");
   font: 18px/1.4 $helvetica;
   color: #233237;
 }
