--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "bauhaus 93", Times, serif;
+  font-family: "bauhaus 93", times, serif;
   color: #233237;
   font-weight: bold;
 text-shadow: 2px 2px;
