--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ html {
 
 body {
 	background-image: url("http://www.intrawallpaper.com/static/images/cube-pattern-28617-2560x1600.jpg");
-  font: 18px/1.4 $helvetica;
+  font: 18px/1.4 "bauhaus 93", times, serif;;
   color: #233237;
 }
 
