--- a/style.scss
+++ b/style.scss
@@ -21,8 +21,8 @@ body {
 	background-image: url("http://www.intrawallpaper.com/static/images/cube-pattern-28617-2560x1600.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
   color: #233237;
-border: 1px solid black;
-    background-color: lightblue;
+border: 1px solid #015249;
+    background-color: #015249;
     padding-top: 50px;
     padding-right: 30px;
     padding-bottom: 50px;
