--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 	background-image: url("http://www.intrawallpaper.com/static/images/cube-pattern-28617-2560x1600.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #233237;
+  color: #a5a5af;
 }
 
 .container {
@@ -37,7 +37,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "bauhaus 93", times, serif;
-  color: #233237;
+  color: #a5a5af;
   font-weight: bold;
 text-shadow: 2px 2px;
 	
