--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background-image: url("https://gph.is/18HG7A0.jpg");
+	background-image: url("https://giphy.com/gifs/beautiful-christmas-TRjQlKBURMA5G/tile");
   font: 18px/1.4 "bauhaus 93", times, serif;;
   color: #a5a5af;
 }
