--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background-image: url("http://www.intrawallpaper.com/static/images/cube-pattern-28617-2560x1600.jpg");
+background-image: url("https://wallpapercave.com/wp/a2j8QdQ.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
   color: #a5a5af;
 }
