--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
   margin: 0 auto;
   max-width: 740px;
  border: 6px solid #77c9d4;
-    background-color: #015249;
+    background-color: #0066ff;
     padding-top: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
