--- a/style.scss
+++ b/style.scss
@@ -37,7 +37,7 @@ background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "bauhaus 93", times, serif;
-  color: #a5a5af;
+  color: #ffffff;
   font-weight: bold;
 text-shadow: 2px 2px;
 	
