--- a/style.scss
+++ b/style.scss
@@ -20,7 +20,7 @@ html {
 body {
 background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #a5a5af;
+  color: #ffffff;
 }
 
 .container {
