--- a/style.scss
+++ b/style.scss
@@ -20,14 +20,14 @@ html {
 body {
 background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #ffffff;
+  color: #4fb9e3;
 }
 
 .container {
   margin: 0 auto;
   max-width: 740px;
- border: 6px solid #77c9d4;
-    background-color: #0066ff;
+ border: 6px solid #5860e9;
+    background-color: #8860d0;
     padding-top: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
@@ -37,7 +37,7 @@ background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "bauhaus 93", times, serif;
-  color: #ffffff;
+  color: #4fb9e3;
   font-weight: bold;
 text-shadow: 2px 2px;
 	
