--- a/style.scss
+++ b/style.scss
@@ -18,16 +18,16 @@ html {
 }
 
 body {
-background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
+background-image: url("https://i.pinimg.com/originals/14/6a/ab/146aab37a3748d2a0ae38a4f8f898944.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #4fb9e3;
+  color: #ffffff;
 }
 
 .container {
   margin: 0 auto;
   max-width: 740px;
- border: 6px solid #5860e9;
-    background-color: #8860d0;
+ border: 6px solid #ffd900;
+    background-color: #ff1a1a;
     padding-top: 30px;
     padding-right: 30px;
     padding-bottom: 30px;
@@ -37,7 +37,7 @@ background-image: url("https://wallpapercave.com/wp/k15SYSI.jpg");
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "bauhaus 93", times, serif;
-  color: #4fb9e3;
+  color: #ffffff;
   font-weight: bold;
 text-shadow: 2px 2px;
 	
