--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-background-image: url("https://i.pinimg.com/originals/06/d8/b1/06d8b19a21a3f332e54ef23883be74cb.jpg");
+background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/Happy-New-Year-Background-4.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
   color: #ffffff;
 }
