--- a/style.scss
+++ b/style.scss
@@ -27,11 +27,8 @@ background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/
   margin: 0 auto;
   max-width: 740px;
  border: 10px solid transparent;
-    background-color: #e6b800;
-    padding-top: 30px;
-    padding-right: 30px;
-    padding-bottom: 30px;
-    padding-left: 80px;
+background-color: #e6b800;
+padding: 15px 
 border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;  
 width: 100%;
 }
