--- a/style.scss
+++ b/style.scss
@@ -29,7 +29,7 @@ background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/
  border: 10px solid transparent;
 background-color: #e6b800;
 padding: 15px 
-border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;  
+border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round  
 width: 100%;
 }
 
