--- a/style.scss
+++ b/style.scss
@@ -28,8 +28,8 @@ background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/
   max-width: 740px;
  border: 10px solid transparent;
 background-color: #e6b800;
-padding: 15px 
-border-image: url("https://cdn.pageborders.net/samples/Colorful_Border.png") 30 round  
+padding: 15px;
+border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;
 width: 100%;
 }
 
