--- a/style.scss
+++ b/style.scss
@@ -28,8 +28,9 @@ background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/
   max-width: 740px;
  border: 10px solid transparent;
 background-color: #e6b800;
-padding: 15px;
+padding: 30px;
 border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;
+border-radius: 30px;
 width: 100%;
 }
 
