--- a/style.scss
+++ b/style.scss
@@ -18,16 +18,16 @@ html {
 }
 
 body {
-background-image: url("http://2013merrychristmas.com/wp-content/uploads/2017/12/Happy-New-Year-Background-4.jpg");
+background-image: url("http://moziru.com/images/splatter-clipart-color-splat-17.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #ffffff;
+  color: #ff1a1a;
 }
 
 .container {
   margin: 0 auto;
   max-width: 740px;
  border: 10px solid transparent;
-background-color: #003399;
+background-color: #ffffff;
 padding: 30px;
 border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;
 width: 100%;
@@ -35,7 +35,7 @@ width: 100%;
 
 h1, h2, h3, h4, h5, h6 {
   font-family: "bauhaus 93", times, serif;
-  color: #ffffff;
+  color: #0066ff;
   font-weight: bold;
 text-shadow: 2px 2px;
 	
