--- a/style.scss
+++ b/style.scss
@@ -18,18 +18,18 @@ html {
 }
 
 body {
-background-image: url("http://moziru.com/images/splatter-clipart-color-splat-17.jpg");
+background-image: url("http://www.mrtumblr.com/wp-content/uploads/2017/01/Chinese-New-Year-Background-8.jpg");
   font: 18px/1.4 "bauhaus 93", times, serif;;
-  color: #ff1a1a;
+  color: #ffcc00;
 }
 
 .container {
   margin: 0 auto;
   max-width: 740px;
  border: 10px solid transparent;
-background-color: #ffffff;
+background-color: #ff1a1a;
 padding: 30px;
-border-image: url(https://cdn.pageborders.net/samples/Colorful_Border.png) 30 round;
+border-image: url(http://bpic.588ku.com/element_pic/00/16/08/1257ad7f374247c.jpg) 30 round;
 width: 100%;
 }
 
